Correct nav alignment

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -46,8 +46,6 @@
 
 @media only screen and (max-width: 600px) {
 .item{
-    display: flex;
-    justify-content: left;
     padding-right: 0;
     margin-right: 0;
     margin-bottom: 30px;
